[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-resolve"
version = "1.0.3"
description = "Deferred routing and content negotiation for FastAPI"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "hlynurj"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100",
]
[project.urls]
Homepage = "https://github.com/hlynurj/fastapi-resolve"
Repository = "https://github.com/hlynurj/fastapi-resolve"